Fix AboutMe overflow and heading inconsistency

--- a/components/homepage/AboutMe/AboutMe.module.scss
+++ b/components/homepage/AboutMe/AboutMe.module.scss
@@ -6,41 +6,39 @@
 	align-items: center;
 	width: 100%;
 	min-height: 80svh;
-	padding: 4em;
+	padding: 4svh;
 	font-family: Overpass, serif;
 	background-color: global.$slightlyLighter;
 }
 
 .offsetCard {
-	position: relative;
 	background-color: global.$slightlyDarker;
-	padding: 8rem;
-	width: 80%;
+	padding: 2svh;
+	width: 100%;
 	max-width: 800px;
 	border-radius: 40px;
-	margin: auto;
+	transform: translateY(-1rem)
 }
 
 .heading {
 	display: block;
-	position: absolute;
-	padding: 2rem;
+	padding: 1rem;
 	background-color: global.$White;
 	color: global.$Black;
 	border-radius: 40px;
+	max-width: 400px;
 	top: 0;
-	left: 10%;
-	translate: -50% -50%;
+	margin: 0;
+	z-index: 2;
 }
 
 .description {
-	font-size: 1.6rem;
+	font-size: 1rem;
 	font-weight: 200;
 	width: 100%;
 }
 
 @media (min-aspect-ratio: 1) {
-
 	.description {
 		font-size: 1.6rem;
 		font-weight: 200;
